--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -1,5 +1,5 @@
 header{
-	background-color: #f3f3f3;
+	background-color: $grey;
 	position: fixed; left:0; top:0;
 	padding: $padding2;
 	width: 100vw;
