--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -7,6 +7,7 @@ $footerheight: 50px;
 
 /* Colors */
 $bg: #fff;
+$grey: #f3f3f3;
 $color: black;
 $links: blue;
 $hover: blue;
@@ -14,10 +15,10 @@ $hover: blue;
 /* Fonts */
 $font: 'TH Grotesk SEMI ( CCWA )', monospace, sans-serif;
 
-$font1: 18px;
+$font1: 16px;
 $font1-ls: 20px;
 
-$font2: 74px;
+$font2: 70px;
 $font2-ls: 66px;
 
 
