--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -17,7 +17,7 @@
                         //li
                             span#images-view IMAGES VIEW
                         li
-                            span#contributors-toggle.active CONTRIBUTORS
+                             a(href="/contributors") CONTRIBUTORS
                         
             .col-xs-6
                 nav.extra
