--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,7 +9,7 @@ html(lang='en')
     block js
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
-  body
+  body.loading
 
     #page
     
