--- a/public/css/_liste.scss
+++ b/public/css/_liste.scss
@@ -36,7 +36,7 @@
 		.title{
 			overflow-x: hidden;
 			position: relative; min-height: 70px;
-			margin-bottom: $marge1;
+			//margin-bottom: $marge1;
 			
 			.autoradio{
 				height: 100%;
