--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -13,9 +13,9 @@ $links: blue;
 $hover: blue;
 
 /* Fonts */
-$font: 'TH Grotesk SEMI ( CCWA )', monospace, sans-serif;
+$font: 'TH Grotesk SEMI ( CCWA )', helvetica, monospace, sans-serif;
 
-$font1: 16px;
+$font1: 15px;
 $font1-ls: 20px;
 
 $font2: 70px;
