--- a/app/views/contributors.jade
+++ b/app/views/contributors.jade
@@ -5,7 +5,7 @@ block content
         include header
         
     section
-        .contributors
+        .contributors.colums
             each user in contributors
                 .contributor
                     a(href="/search/#{user}") #{user}
