--- a/public/css/_contributors.scss
+++ b/public/css/_contributors.scss
@@ -1,6 +1,7 @@
 .contributors{
 	margin-bottom: $marge3;
 	.contributor{
-		font-size:$font2;
+		font-size:$font2 /2;
+		margin-bottom: 0.2em;
 	}
 }
