--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -1,10 +1,14 @@
 .row
     .col-xs-6
-        h1 
-            a(href="/") 
-                span #{title} 
-                if total_posts
-                    span (#{total_posts})
+        .row
+            .col-xs-6
+                h1 
+                    a(href="/") 
+                        span #{title} 
+                        if total_posts
+                            span (#{total_posts})
+            .col-xs-6
+                //a(href="https://www.facebook.com/groups/393558204075688" target="_blank") FB Group
     .col-xs-6
         .row
             .col-xs-6
