--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2707,7 +2707,8 @@ header {
   100% {
     transform: translate(-100%, 0); } }
 .contributors {
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  column-count: 2; }
   .contributors .contributor {
     font-size: 35px;
     margin-bottom: 0.2em; }
