--- a/public/css/_contributors.scss
+++ b/public/css/_contributors.scss
@@ -1,9 +1,9 @@
 .contributors{
 	margin-bottom: $marge3;
-	column-count: 2;
+	column-count: 4;
   	//column-gap: $marge3;
 	.contributor{
-		font-size:$font2 /2;
+		font-size:30px;
 		margin-bottom: 0.2em;
 	}
 }
