--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -5,25 +5,19 @@ block content
         include header
         
     section.about
-        .row
-            .col-xs-9
-            .col-xs-3
-                h2 ABOUT
-                ul
-                    li
-                        div
-                            a(href="https://www.facebook.com/groups/393558204075688" taret="_blank") CRAZY COOL WEBSITE 
-                        div
-                            a(href="https://www.facebook.com/ZimmerhacklSebastian" taret="_blank") Sebastian Zimmerhackl
-                    li
-                        div ORIGNAL IDEA & CODING
-                        a(href="https://ahmedghazi.com/" taret="_blank") Ahmed Ghazi
-                    li
-                        div DESIGN
-                        a(href="http://www.hervethomas.com/" taret="_blank") Thomas Herve
-                    li
-                        div TYPEFACE IN USE
-                        div Th Grotesk Semi
 
+        p 
+            | Internet references from facebook group community Crazy Cool Website since 2013.<br/>
+            | If you wish to submit join the  → <a href="https://www.facebook.com/groups/393558204075688" taret="_blank">GROUP</a>.
+
+        p 
+            | This website is a proposition from <a href="https://www.facebook.com/groups/393558204075688" taret="_blank">Ahmed Ghazi</a>, coded by himself & designed by <a href="http://www.hervethomas.com" taret="_blank">Thomas Hervé</a>, under the vision <a href="https://www.facebook.com/ZimmerhacklSebastian" taret="_blank">Sebastian of Zimmerhackl</a>.
+
+        p 
+            | All rights reserved ©2018 CCWA.<br/>
+            | Typeface in use TH Grotesk Semi.
+                
+
+                    
 
     
