--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -10,7 +10,7 @@ each post in posts
                             div.autoradio
                                 span.name #{post.name}
                          
-                        div.date
+                        div.metas
                             //span POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
                             .row
                                 .col-xs-6
@@ -25,7 +25,7 @@ each post in posts
                                     figure
                                         if post.color
                                             div.placeholder(style="background-color:##{post.color}")
-                                        img(src="#{root_url}/#{image}" width="" height="76" onerror="this.className='img404'")
+                                        img(src="#{root_url}/#{image}" width="" height="69" onerror="this.className='img404'")
                             .col-xs-6
                                 div.from.text-right #{post.from}
 
