--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -9,8 +9,8 @@ $footerheight: 50px;
 $bg: #fff;
 $grey: #f3f3f3;
 $color: black;
-$links: blue;
-$hover: blue;
+$links: gray;
+$hover: gray;
 
 /* Fonts */
 $font: 'TH Grotesk SEMI ( CCWA )', helvetica, monospace, sans-serif;
