--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -14,7 +14,7 @@ each post in posts
                             //span POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
                             .row
                                 .col-xs-6
-                                    div POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
+                                    div.date POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
                                 .col-xs-6
                                     div.url.text-right #{post.link}
                     .col-xs-6.col-right
