--- a/public/css/_layout.scss
+++ b/public/css/_layout.scss
@@ -22,6 +22,7 @@ section{
 		font-size: $font3;
 		line-height: 1.2em;
 		margin-bottom: 1em;
-		a{color: blue;}
+		a{
+			color: $darkerGrey;}
 	}
 }
