--- a/public/css/_liste.scss
+++ b/public/css/_liste.scss
@@ -32,6 +32,7 @@
 			text-overflow: ellipsis;
 			width: 100%;
 			overflow: hidden;
+			color: gray;
 		}
 	
 		figure{
@@ -73,7 +74,10 @@
 				animation: autoradio 5s linear infinite alternate;
 				
 			}
-			.url{color: blue!important}
+			.title,
+			.date,
+			.from{color: $color;}
+			.url{color: $darkerGrey!important}
 			
 		}
 		.col-left:hover + .col-right{
