--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -24,3 +24,5 @@ html(lang='en')
     script(src='/js/nav-controller.js')
     script(src='/js/scroll-controller.js')
     script(src='/js/app.js')
+    if title == "pull"
+      script(src='/js/pull.js')
