--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -6,7 +6,7 @@
                     a(href="/") 
                         span #{title} 
                         if total_posts
-                            span (#{total_posts})
+                            span.total_posts (#{total_posts})
             .col-xs-6
                 //a(href="https://www.facebook.com/groups/393558204075688" target="_blank") FB Group
     .col-xs-6
