--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -9,7 +9,7 @@ each post in posts
                         div.title
                             div.autoradio
                                 if post.color
-                                    span.name(style="color:#{post.color}") #{post.name}
+                                    span.name(style="color:##{post.color}") #{post.name}
                                 else
                                     span.name #{post.name}
                         div.metas
