--- a/public/css/_liste.scss
+++ b/public/css/_liste.scss
@@ -74,11 +74,10 @@
 				animation: autoradio 5s linear infinite alternate;
 				
 			}
-			.title,
+			/*.title,
 			.date,
 			.from{color: $color;}
-			.url{color: $darkerGrey!important}
-			
+			.url{color: $darkerGrey!important}*/
 		}
 		.col-left:hover + .col-right{
 			img{
