--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -28,14 +28,14 @@
                     .timestamps
                         ul
                             li
-                                //div.berlin BERLIN
-                                //div.time #{moment().tz("Europe/Berlin").format("ha")}
+                                div.berlin BERLIN
+                                div.time #{moment().tz("Europe/Berlin").format("ha")}
                             li
-                                //div.nyc NEW YORK
-                                //div.time #{moment().tz("America/New_York").format("ha")}
+                                div.nyc NEW YORK
+                                div.time #{moment().tz("America/New_York").format("ha")}
                             li
-                                //div.tokyo TOKYO
-                                //div.time #{moment().tz("Asia/Tokyo").format("ha")}
+                                div.tokyo TOKYO
+                                div.time #{moment().tz("Asia/Tokyo").format("ha")}
 
                     .about
                         a(href="/about") ABOUT
