--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -21,7 +21,7 @@ html(lang='en')
     script(src='/js/jquery.min.js')
     script(src='/js/_plugins.js')
     script(src='/js/smooth-state.js')
-    script(src='/js/nav-controller.js')
+    script(src='/js/search-controller.js')
     script(src='/js/scroll-controller.js')
     script(src='/js/app.js')
     if title == "pull"
