--- a/app/views/liste.jade
+++ b/app/views/liste.jade
@@ -14,10 +14,9 @@ each post in posts
                             div.autoradio
                                 span.name #{post.name}
                         div.metas
-                            //span POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
-                            .row
+                            .row.bottom-xs
                                 .col-xs-6
-                                    div.date POSTED #{moment(post.updated_time).format('MM.DD.YY HH:MM')}
+                                    div.date Posted → #{moment(post.updated_time).format('MM.DD.YY — HH:MM')}
                                 .col-xs-6
                                     div.url.text-right #{post.link}
                     .col-xs-6.col-right
