--- a/public/css/_components.scss
+++ b/public/css/_components.scss
@@ -12,6 +12,7 @@
 	left: 50%; top: 50%;
 	transform: translate(-50%, -50%);
 	display:none;
+	z-index: 999999;
 	&:hover{cursor: none;}
 	.is-exiting &{display: block}
 }
