--- a/public/css/_layout.scss
+++ b/public/css/_layout.scss
@@ -21,6 +21,7 @@ section{
 	p{
 		font-size: $font3;
 		line-height: 1.2em;
+		line-height: 58px;
 		margin-bottom: 1em;
 		a{
 			color: $darkerGrey;}
