--- a/app/views/header.jade
+++ b/app/views/header.jade
@@ -29,13 +29,13 @@
                         ul
                             li
                                 div.berlin BERLIN
-                                div.time #{moment().tz("Europe/Berlin").format("ha")}
+                                //div.time #{moment().tz("Europe/Berlin").format("ha")}
                             li
                                 div.nyc NEW YORK
-                                div.time #{moment().tz("America/New_York").format("ha")}
+                                //div.time #{moment().tz("America/New_York").format("ha")}
                             li
                                 div.tokyo TOKYO
-                                div.time #{moment().tz("Asia/Tokyo").format("ha")}
+                                //div.time #{moment().tz("Asia/Tokyo").format("ha")}
 
                     .about
                         a(href="/about") ABOUT
